--- a/index.html/index.html
+++ b/index.html/index.html
@@ -8,6 +8,8 @@
   <title>*|MC:SUBJECT|*</title>
 
   <style type="text/css">
+
+
     /* Smartphones (portrait and landscape) */
     @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     /* Styles */
@@ -73,27 +75,11 @@
   </style>
 </head>
 
-<body style="
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    background-color: #FAFAFA;"
-    >
-    <table
-    align="center"
-    border="1px"
-    cellpadding="0"
-    cellspacing "0"
-    width="640"
-    border-collapse="collapse"
-    color="#8080ff">
+<body style="padding: 0; margin: 0;" bgcolor="white">
+    <table border="1px" align="center" cellpadding="0" cellspacing="0" width="100%"
+     style="color:#8080ff; border-color:#000000; border-collapse: collapse; margin-top:15px; text-align: center;">
       <tr>
-        <td style="
-        padding: 40px 0 30px 0;
-        background-color: #99ff99;"
-        >
+        <td style="padding: 40px 20px 30px 20px;" bgcolor="#99ff99">
           Header
         </td>
       </tr>
