--- a/index.html/index.html
+++ b/index.html/index.html
@@ -77,10 +77,10 @@
 
 <body style="padding: 0; margin: 0;" bgcolor="white">
     <table border="1px" align="center" cellpadding="0" cellspacing="0" width="100%"
-     style="color:#8080ff; border-color:#000000; border-collapse: collapse; margin-top:15px; text-align: center;">
+     style="color:#FFFFFF; border-color:#000000; border-collapse: collapse; margin-top:0px; text-align: center;">
       <tr>
-        <td style="padding: 40px 20px 30px 20px;" bgcolor="#99ff99">
-          Header
+        <td style="padding: 140px 20px 30px 20px; height: 500px; background: url(http://tractorstrucks.btrading.nl/vehicle-images/13940407/1/1492091115/800x600/daf-xf-105-460-euro-5-4210) bottom center no-repeat; font-size:36px; font-family:Arial text-align:" >
+          DAF XF 105.460
         </td>
       </tr>
       <tr>
