--- a/index.html/index.html
+++ b/index.html/index.html
@@ -76,18 +76,22 @@
 </head>
 
 <body style="padding: 0; margin: 0;" bgcolor="white">
-    <table border="1px" align="center" cellpadding="0" cellspacing="0" width="100%"
-     style="color:#FFFFFF; border-color:#000000; border-collapse: collapse; margin-top:0px; text-align: center;">
-      <tr>
-        <td style="padding: 140px 20px 30px 20px; height: 500px; background: url(http://tractorstrucks.btrading.nl/vehicle-images/13940407/1/1492091115/800x600/daf-xf-105-460-euro-5-4210) bottom center no-repeat; font-size:36px; font-family:Arial text-align:" >
-          DAF XF 105.460
-        </td>
-      </tr>
-      <tr>
-        <td>Body</td>
-      </tr>
-      <tr>
-        <td>Footer</td>
-      </tr>
-    </table>
+  <table border="1" cellpadding="0" cellspacing="0" width="100%">
+    <tr>
+      <td>
+        <table border="1px" align="center" cellpadding="0" cellspacing="0" width="98%"
+        style="color:#FFFFFF; border-color:#000000; border-collapse: collapse; margin-top:0px; text-align: center;">
+          <tr style="padding: 10px 20px 30px 20px; height: 600px; background: url(http://www.volvotrucks.nl/content/dam/volvo/volvo-trucks/masters/euro-6/volvo-fh-series/volvo-fh16/2324x1200-volvo-fh16-mountain-reflection.jpg) bottom center no-repeat;">
+            <td width="200px" style="font-size:36px; font-family:Arial;">VOLVO FH16 500 | BRONKHORST TRADING</td>
+          </tr>
+          <tr style="color:#000000">
+            <td>Body</td>
+          </tr>
+          <tr style="color:#000000">
+            <td>Footer</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
 </body>
