--- a/index.html/index.html
+++ b/index.html/index.html
@@ -77,12 +77,17 @@
 
 <body style="padding: 0; margin: 0;" bgcolor="white">
   <table border="1" cellpadding="0" cellspacing="0" width="100%">
+    <tr><td>hello</td></tr>
     <tr>
       <td>
-        <table border="1px" align="center" cellpadding="0" cellspacing="0" width="98%"
-        style="color:#FFFFFF; border-color:#000000; border-collapse: collapse; margin-top:0px; text-align: center;">
-          <tr style="padding: 10px 20px 30px 20px; height: 600px; background: url(http://www.volvotrucks.nl/content/dam/volvo/volvo-trucks/masters/euro-6/volvo-fh-series/volvo-fh16/2324x1200-volvo-fh16-mountain-reflection.jpg) bottom center no-repeat;">
-            <td width="200px" style="font-size:36px; font-family:Arial;">VOLVO FH16 500 | BRONKHORST TRADING</td>
+        <table border="1px" align="center" cellpadding="0" cellspacing="0" width="640px"
+        style="color:#000000; border-color:#000000; border-collapse: collapse; margin-top:0px; text-align: center;">
+          <tr style="padding: 10px 20px 30px 20px; height: 640px; background: url(http://www.volvotrucks.nl/content/dam/volvo/volvo-trucks/masters/euro-6/volvo-fh-series/volvo-fh16/2324x1200-volvo-fh16-mountain-reflection.jpg) center no-repeat" >
+            <td>
+              <table border="1" align="center" cellpadding="0" cellspacing="0" width="600px" style="border: solid 1px red; margin-top:450px;">
+                <tr><td style="font-size:32px; font-family: Arial; color:#FFFFFF; ">BRONKHORST TRADING</tr></td>
+              </table>
+            </td>
           </tr>
           <tr style="color:#000000">
             <td>Body</td>
