--- a/index.html/index.html
+++ b/index.html/index.html
@@ -80,11 +80,11 @@
     <tr><td>hello</td></tr>
     <tr>
       <td>
-        <table border="1px" align="center" cellpadding="0" cellspacing="0" width="640px"
+        <table border="1px" align="center" cellpadding="0" cellspacing="0" width="600px"
         style="color:#000000; border-color:#000000; border-collapse: collapse; margin-top:0px; text-align: center;">
-          <tr style="padding: 10px 20px 30px 20px; height: 640px; background: url(http://www.volvotrucks.nl/content/dam/volvo/volvo-trucks/masters/euro-6/volvo-fh-series/volvo-fh16/2324x1200-volvo-fh16-mountain-reflection.jpg) center no-repeat" >
+          <tr width="600px" style="padding: 10px 20px 30px 20px; height: 640px; background: url(http://www.volvotrucks.nl/content/dam/volvo/volvo-trucks/masters/euro-6/volvo-fh-series/volvo-fh16/2324x1200-volvo-fh16-mountain-reflection.jpg) center no-repeat" >
             <td>
-              <table border="1" align="center" cellpadding="0" cellspacing="0" width="600px" style="border: solid 1px red; margin-top:450px;">
+              <table border="1" align="center" cellpadding="0" cellspacing="0" width="100%" style="border: solid 1px red; margin-top:450px;">
                 <tr><td style="font-size:32px; font-family: Arial; color:#FFFFFF; ">BRONKHORST TRADING</tr></td>
               </table>
             </td>
