tekst voor afbeelding

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -76,27 +76,35 @@
 </head>
 
 <body style="padding: 0; margin: 0;" bgcolor="white">
-  <table border="1" cellpadding="0" cellspacing="0" width="100%">
+  <table border="1" cellpadding="0" cellspacing="0" align="center" width="100%">
     <tr><td>hello</td></tr>
     <tr>
       <td>
         <table border="1px" align="center" cellpadding="0" cellspacing="0" width="600px"
-        style="color:#000000; border-color:#000000; border-collapse: collapse; margin-top:0px; text-align: center;">
-          <tr width="600px" style="padding: 10px 20px 30px 20px; height: 640px; background: url(http://www.volvotrucks.nl/content/dam/volvo/volvo-trucks/masters/euro-6/volvo-fh-series/volvo-fh16/2324x1200-volvo-fh16-mountain-reflection.jpg) center no-repeat" >
-            <td>
-              <table border="1" align="center" cellpadding="0" cellspacing="0" width="100%" style="border: solid 1px red; margin-top:450px;">
-                <tr><td style="font-size:32px; font-family: Arial; color:#FFFFFF; ">BRONKHORST TRADING</tr></td>
-              </table>
+        style="color:#000000; border-color:#000000; border-collapse: collapse;">
+          <tr>
+            <td style="vertical-align:bottom; text-align:center; color:#FFFFFF; padding-bottom:50px; width:400px; height:400px; background-repeat:no-repeat; background-position:center; font-size:32px; font-family: Arial;" background="http://tractorstrucks.btrading.nl/s833a9f18e69c387094e3bab8043444d4/vehicle-images/13940407/1/1492091115/1024x768/daf-xf-105-460-euro-5-4210" > Bronkhorst Trading
             </td>
-          </tr>
-          <tr style="color:#000000">
-            <td>Body</td>
-          </tr>
-          <tr style="color:#000000">
-            <td>Footer</td>
           </tr>
         </table>
       </td>
     </tr>
+    <tr style="color:#000000">
+      <td>Body</td>
+    </tr>
+    <tr style="color:#000000">
+      <td>Footer</td>
+    </tr>
+  </table>
+</td>
+    </tr>
   </table>
 </body>
+
+
+
+
+
+<!-- comment out
+<img width="564" align="center" class="mcnImage" style="padding-bottom: 0px;vertical-align: bottom;display: inline !important;max-width: 575px;border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;" alt="" src="https://gallery.mailchimp.com/74e602f850e6da67105cb28db/images/edb645af-2631-49cd-9abf-89966dc245ed.jpg">
+-->
